[tool.poetry]
name = "music-player"
version = "0.1.0"
description = "Simple music player"
authors = ["tarpetos <hevlichtaras@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.0.1"
black = "^24.10.0"
pytest = "^8.3.3"
commitizen = "^3.29.1"
pyinstaller = {version=">=6.0", python = ">=3.12, <3.14"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
